// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dZjhST"
  >
    Flex Row
  </div>
</DocumentFragment>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa tvNuj"
  >
    Flex Row Reverse
  </div>
</DocumentFragment>
`;
